--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,14 @@ android {
         }
     }
 }
+sourceSets {
+    androidTest {
+        java.srcDirs += "src/sharedTestData/java"
+    }
+    test {
+        java.srcDirs += "src/sharedTestData/java"
+    }
+}
 
 dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
