--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,15 +52,18 @@ android {
             buildConfigField "String", "TYPE", '"REAL"'
         }
     }
-}
-sourceSets {
-    androidTest {
-        java.srcDirs += "src/sharedTestData/java"
+
+
+    sourceSets {
+        androidTest {
+            java.srcDirs += "src/sharedTestData/java"
+        }
+        test {
+            java.srcDirs += "src/sharedTestData/java"
+        }
     }
-    test {
-        java.srcDirs += "src/sharedTestData/java"
-    }
 }
+
 
 dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -70,6 +73,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'junit:junit:4.12'
 
     //Test
     testImplementation 'junit:junit:4.13.2'
