was added impl to recyclerview, was created DetailsFragmentEspressoTest.kt, and was changed FakeGitHubRepository.kt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,7 @@ dependencies {
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 
     debugImplementation 'androidx.fragment:fragment-testing:1.4.1'
+
+    debugImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
 }
+
